fix: add align self to feature first col img

--- a/css/queries.css
+++ b/css/queries.css
@@ -29,7 +29,7 @@
 @media all and (min-width: 1200px) {
   /* HEADER */
   header .container {
-    width: 70%;
+    width: 60%;
   }
 
   .hamburgher {
@@ -43,7 +43,7 @@
   /* FEATURE SECTION */
 
   .feature-section.container {
-    width: 70%;
+    width: 60%;
   }
 
   /* first card */
@@ -56,7 +56,16 @@
     width: 50%;
   }
 
+  .first-col-img {
+    align-self: flex-end;
+    width: 40%;
+  }
+
   .first-col-img img {
-    max-width: 70%;
+    max-width: 100%;
+  }
+
+  .feature-section-btn {
+    padding: 1.2rem 4rem;
   }
 }
